refactor(aiida): Add detailed error message for invalid subtype ID scenarios